deploy/blue-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-deploy
  labels:
    name: blue-deploy
    version: 0.1.0
    deployment: blue
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    name: blue-deploy
    version: 0.1.0
    deployment: blue
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-deploy
  labels:
    name: blue-deploy
    version: 0.1.0
    deployment: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      name: blue-deploy
      version: 0.1.0
      deployment: blue
  template:
    metadata:
      labels:
        name: blue-deploy
        version: 0.1.0
        deployment: blue
    spec:
      containers:
        - name: blue-green-app
          image: "eu.gcr.io/blue-green-project/blue-green-app:0.1.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
