deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: blue-green
  namespace: default
spec:
  rules:
    - host: blue-green.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: green-deploy
                port: 
                  number: 80
